force-app/main/default/objects/Tax_Table__c/Tax_Table__c.object-meta.xml
<CustomObject>
    <label>Tax Table</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tax Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>