force-app/main/default/objects/Tax_Table__c/fields/Actual_Tax_Rate_on_Product_Rev__c.field-meta.xml
<CustomField>
    <fullName>Actual_Tax_Rate_on_Product_Rev__c</fullName>
    <label>Actual Tax Rate on Product Rev</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>