force-app/main/default/objects/Tax_Table__c/fields/Tax_Due_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Due_Rate__c</fullName>
    <label>Tax Due Rate</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>