force-app/main/default/objects/Tax_Table__c/fields/Taxable_Gross_Receipts_Rate__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Gross_Receipts_Rate__c</fullName>
    <label>Taxable Gross Receipts Rate</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>